--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <br>
     <h1>MENÚ CSS</h1>
-    <a href="">INTEGRACIÓN CSS</a>
-    <a href="">SELECTORES</a>
-    <a href="">BOX-MODEL</a>
-    <a href="">COLORES</a>
+    <a href="integracion.html">INTEGRACIÓN CSS</a>
+    <a href="selectores.html">SELECTORES</a>
+    <a href="box.html">BOX-MODEL</a>
+    <a href="colores.html">COLORES</a>
     <a href="">TEXTO</a>
     <a href="">UNIDADES</a><br><br>
     <h4>OLVERA REYES TANIA</h4>
