--- a/integracioncss.html
+++ b/integracioncss.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS EJEMPLOS</title>
-    <link rel="stylesheet" href="integracion.css">
+    <link rel="stylesheet" href="int.css">
 
 </head>
 <!--1. Integración de línea-->
