--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <br>
     <h1>MENÚ CSS</h1>
-    <a href="integracion.html">INTEGRACIÓN CSS</a>
+    <a href="integracioncss.html">INTEGRACIÓN CSS</a>
     <a href="selectores.html">SELECTORES</a>
-    <a href="box.html">BOX-MODEL</a>
+    <a href="boxmodel.html">BOX-MODEL</a>
     <a href="colores.html">COLORES</a>
     <a href="">TEXTO</a>
     <a href="">UNIDADES</a><br><br>
