--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <a href="selectores.html">SELECTORES</a>
     <a href="boxmodel.html">BOX-MODEL</a>
     <a href="colores.html">COLORES</a>
-    <a href="">TEXTO</a>
+    <a href="texto.html">TEXTO</a>
     <a href="">UNIDADES</a><br><br>
     <h4>OLVERA REYES TANIA</h4>
-    <h4>CRUZ REFUGIO LESLYE AMERICA</h4>
 </body>
 </html>
