--- a/texto.html
+++ b/texto.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="txt.css">
 </head>
 <body>
-    <h1>OLVERA REYES TANIA</h1>
+    <h1 id="color1">OLVERA REYES TANIA</h1><br>
+    <h1 id="color2">OLVERA REYES TANIA</h1><br>
+    <h1 id="family1">OLVERA REYES TANIA</h1><br>
+    <h1 id="family2">OLVERA REYES TANIA</h1><br>
+    
 </body>
 </html>
