--- a/texto.html
+++ b/texto.html
@@ -7,10 +7,31 @@
     <link rel="stylesheet" href="txt.css">
 </head>
 <body>
-    <h1 id="color1">OLVERA REYES TANIA</h1><br>
-    <h1 id="color2">OLVERA REYES TANIA</h1><br>
-    <h1 id="family1">OLVERA REYES TANIA</h1><br>
-    <h1 id="family2">OLVERA REYES TANIA</h1><br>
+    <h1 id="color1">OLVERA REYES TANIA</h1>
+    <h1 id="color2">OLVERA REYES TANIA</h1><br><br>
+
+    <h1 id="family1">OLVERA REYES TANIA</h1>
+    <h1 id="family2">OLVERA REYES TANIA</h1><br><br>
+
+    <h1 id="size1">OLVERA REYES TANIA</h1>
+    <h1 id="size2">OLVERA REYES TANIA</h1><br><br>
+
+    <h1 id="style1">OLVERA REYES TANIA</h1>
+    <h1 id="style2">OLVERA REYES TANIA</h1>
+    <h1 id="style3">OLVERA REYES TANIA</h1><br><br>
+
+    <h1 id="negrita1">OLVERA REYES TANIA</h1>
+    <h1 id="negrita2">OLVERA REYES TANIA</h1>
+    <h1 id="negrita3">OLVERA REYES TANIA</h1><br><br>
+
+    <h1 id="trans1">OLVERA REYES TANIA</h1>
+    <h1 id="trans2">OLVERA REYES TANIA</h1>
+    <h1 id="trans3">olvera reyes tania</h1><br><br>
+
+    <h1 id="deco1">OLVERA REYES TANIA</h1>
+    <h1 id="deco2">OLVERA REYES TANIA </h1>
+    <h1 id="deco3">OLVERA REYES TANIA </h1>
+    <h1 id="deco4">OLVERA REYES TANIA</h1><br><br>
     
 </body>
 </html>
