--- a/texto.html
+++ b/texto.html
@@ -32,6 +32,19 @@
     <h1 id="deco2">OLVERA REYES TANIA </h1>
     <h1 id="deco3">OLVERA REYES TANIA </h1>
     <h1 id="deco4">OLVERA REYES TANIA</h1><br><br>
+
+    <h1 id="sh1">OLVERA REYES TANIA</h1>
+    <h1 id="sh2">OLVERA REYES TANIA</h1><br><br>
+
+    <p id="text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, vitae at enim, odit excepturi nam ad veniam reprehenderit, labore ullam illum aut? Cumque ipsa quos repudiandae. Optio pariatur repellat quos.
+    Eos veniam quibusdam tempora veritatis nobis repudiandae ex, et exercitationem dolores voluptates dolorum molestias quas quis iure numquam dicta error? Dicta voluptatum accusantium error nulla impedit sed soluta dolor sunt?</p><br>
+    <p id="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ex voluptatum velit assumenda fugiat explicabo, facilis sequi corporis, voluptates odio exercitationem cum recusandae. Delectus placeat mollitia veniam nihil nemo dolor.
+    Officia quae quam molestiae nisi, est amet possimus, nihil exercitationem delectus error tempora alias blanditiis iste laborum excepturi dolore eius ab. Porro deserunt eum, pariatur officiis aperiam vitae odio unde.
+    Voluptatum velit atque repellat voluptate veniam, incidunt accusamus voluptatibus nesciunt distinctio dolores amet omnis. Voluptate similique sapiente, neque earum, aperiam numquam veritatis eaque error qui vel, iure dolorem impedit libero.</p><br>
+    <p id="text3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam, nisi quaerat quisquam doloremque tempora, aut dolorum labore nobis perferendis fuga maxime animi facilis ipsam! Fuga labore distinctio vel aliquid ut.</p><br>
+    <p id="text4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore mollitia voluptatem vitae ex nisi deleniti sit illum, reprehenderit consectetur dolore cumque ipsam illo natus dignissimos? Eum nisi unde accusamus tenetur.
+    Aliquid repudiandae debitis consectetur quis possimus autem incidunt natus blanditiis non omnis hic quod consequatur repellat, quasi accusantium nostrum quibusdam dolores ea asperiores sit ratione totam atque. Odio, fugiat maxime?
+    Amet ipsam consectetur modi atque perferendis officiis non commodi nesciunt maxime? Obcaecati, quas dolor? Ducimus accusamus quibusdam quod ratione quam rem vel provident exercitationem voluptas ipsa? Pariatur, accusamus. Molestias, reprehenderit?</p><br><br>
     
 </body>
 </html>
