--- a/texto.html
+++ b/texto.html
@@ -45,6 +45,11 @@
     <p id="text4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore mollitia voluptatem vitae ex nisi deleniti sit illum, reprehenderit consectetur dolore cumque ipsam illo natus dignissimos? Eum nisi unde accusamus tenetur.
     Aliquid repudiandae debitis consectetur quis possimus autem incidunt natus blanditiis non omnis hic quod consequatur repellat, quasi accusantium nostrum quibusdam dolores ea asperiores sit ratione totam atque. Odio, fugiat maxime?
     Amet ipsam consectetur modi atque perferendis officiis non commodi nesciunt maxime? Obcaecati, quas dolor? Ducimus accusamus quibusdam quod ratione quam rem vel provident exercitationem voluptas ipsa? Pariatur, accusamus. Molestias, reprehenderit?</p><br><br>
+
+    <h1 id="sepa1">TUYUSHI REYES BTS</h1>
+    <h1 id="sepa2">TUYUSHI REYES BTS</h1>
+    <h1 id="sepa3">TUYUSHI REYES BTS</h1>
+    <h1 id="sepa4">TUYUSHI REYES BTS</h1>
     
 </body>
 </html>
