--- a/unidades.html
+++ b/unidades.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>UNIDADES DE MEDIDA</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="uni.css">
 </head>
 
 <body>
