--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <a href="boxmodel.html">BOX-MODEL</a>
     <a href="colores.html">COLORES</a>
     <a href="texto.html">TEXTO</a>
-    <a href="unidades.html">UNIDADES</a><br><br>
+    <a href="unidades.html">UNIDADES</a>
+    <a href="pos.html">POSICIONAMIENTO</a>
+    <a href="emoji.html">EMOJI</a>
+    <a href="casita.html">CASITA</a>
     <h4>OLVERA REYES TANIA</h4>
 </body>
 </html>
