--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="pos.html">POSICIONAMIENTO</a>
     <a href="emoji.html">EMOJI</a>
     <a href="casita.html">CASITA</a>
+    <a href="figuras.html">FIGURAS</a>
     <h4>OLVERA REYES TANIA</h4>
 </body>
 </html>
