--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="emoji.html">EMOJI</a>
     <a href="casita.html">CASITA</a>
     <a href="figuras.html">FIGURAS</a>
-    <h4>OLVERA REYES TANIA</h4>
+    <a href="grilla1">GRILLA 1.0</a>
+
 </body>
 </html>
