--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="casita.html">CASITA</a>
     <a href="figuras.html">FIGURAS</a>
     <a href="grilla1">GRILLA 1.0</a>
+    <a href="grilla2.html">GRILLA 2.0</a>
 
 </body>
 </html>
