--- a/texto.html
+++ b/texto.html
@@ -7,34 +7,34 @@
     <link rel="stylesheet" href="txt.css">
 </head>
 <body>
-    <h1 id="color1">OLVERA REYES TANIA</h1>
-    <h1 id="color2">OLVERA REYES TANIA</h1><br><br>
+    <h1 id="color1">TANIA</h1>
+    <h1 id="color2">TANIA</h1><br><br>
 
-    <h1 id="family1">OLVERA REYES TANIA</h1>
-    <h1 id="family2">OLVERA REYES TANIA</h1><br><br>
+    <h1 id="family1">TANIA</h1>
+    <h1 id="family2">TANIA</h1><br><br>
 
-    <h1 id="size1">OLVERA REYES TANIA</h1>
-    <h1 id="size2">OLVERA REYES TANIA</h1><br><br>
+    <h1 id="size1">TANIA</h1>
+    <h1 id="size2">TANIA</h1><br><br>
 
-    <h1 id="style1">OLVERA REYES TANIA</h1>
-    <h1 id="style2">OLVERA REYES TANIA</h1>
-    <h1 id="style3">OLVERA REYES TANIA</h1><br><br>
+    <h1 id="style1">TANIA</h1>
+    <h1 id="style2">TANIA</h1>
+    <h1 id="style3">TANIA</h1><br><br>
 
-    <h1 id="negrita1">OLVERA REYES TANIA</h1>
-    <h1 id="negrita2">OLVERA REYES TANIA</h1>
-    <h1 id="negrita3">OLVERA REYES TANIA</h1><br><br>
+    <h1 id="negrita1">TANIA</h1>
+    <h1 id="negrita2">TANIA</h1>
+    <h1 id="negrita3">TANIA</h1><br><br>
 
-    <h1 id="trans1">OLVERA REYES TANIA</h1>
-    <h1 id="trans2">OLVERA REYES TANIA</h1>
-    <h1 id="trans3">olvera reyes tania</h1><br><br>
+    <h1 id="trans1">TANIA</h1>
+    <h1 id="trans2">TANIA</h1>
+    <h1 id="trans3">tania</h1><br><br>
 
-    <h1 id="deco1">OLVERA REYES TANIA</h1>
-    <h1 id="deco2">OLVERA REYES TANIA </h1>
-    <h1 id="deco3">OLVERA REYES TANIA </h1>
-    <h1 id="deco4">OLVERA REYES TANIA</h1><br><br>
+    <h1 id="deco1">TANIA</h1>
+    <h1 id="deco2">TANIA </h1>
+    <h1 id="deco3">TANIA </h1>
+    <h1 id="deco4">TANIA</h1><br><br>
 
-    <h1 id="sh1">OLVERA REYES TANIA</h1>
-    <h1 id="sh2">OLVERA REYES TANIA</h1><br><br>
+    <h1 id="sh1">TANIA</h1>
+    <h1 id="sh2">TANIA</h1><br><br>
 
     <p id="text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, vitae at enim, odit excepturi nam ad veniam reprehenderit, labore ullam illum aut? Cumque ipsa quos repudiandae. Optio pariatur repellat quos.
     Eos veniam quibusdam tempora veritatis nobis repudiandae ex, et exercitationem dolores voluptates dolorum molestias quas quis iure numquam dicta error? Dicta voluptatum accusantium error nulla impedit sed soluta dolor sunt?</p><br>
