--- a/pos.html
+++ b/pos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>POSICIONAMIENTO CSS</title>
-  <link rel="stylesheet" href="pocss.css">
+  <link rel="stylesheet" href="poscss.css">
 </head>
 
 <body>
