--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <a href="figuras.html">FIGURAS</a>
     <a href="grilla1">GRILLA 1.0</a>
     <a href="grilla2.html">GRILLA 2.0</a>
+<a href="flex.html">FLEXBOX</a>
 
 </body>
 </html>
