--- a/flex.html
+++ b/flex.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FLEXBOX</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="flex.css">
 </head>
 
 <body>
