--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <a href="grilla1">GRILLA 1.0</a>
     <a href="grilla2.html">GRILLA 2.0</a>
 <a href="flex.html">FLEXBOX</a>
+    <a href="media.html">MEDIAQUERY</a>
 
 </body>
 </html>
