--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="grilla2.html">GRILLA 2.0</a>
 <a href="flex.html">FLEXBOX</a>
     <a href="media.html">MEDIAQUERY</a>
+    <a href="animacion.html">ANIMACIÓN</a>
 
 </body>
 </html>
