--- a/animacion.html
+++ b/animacion.html
@@ -15,6 +15,12 @@
     #gatito {
       transition-property: background-color;
       transition-duration: 3s;
+      position: relative;
+      top:200px;
+      height: 100px;
+      width: 200px;
+      border-radius: 10px;
+      font-size: 20px;
     }
   </style>
   
